--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="">Início</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Curso</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="./index.html">Início</a></li>
+                    <li><a href="./about.html">Sobre</a></li>
+                    <li><a href="./course.html">Curso</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contato</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -38,7 +38,7 @@
             <h1>A Maior Universidade Do Mundo</h1>
             <p>Fazer site agora é uma das coisas mais fáceis do mundo.</br> Você só precisa aprender HTML, CSS,
                 Javascript e pronto.</p>
-            <a href="" class="hero-btn">Visite-nos para saber mais</a>
+            <a href="./about.html" class="hero-btn">Visite-nos para saber mais</a>
         </div>
     </section>
 
@@ -167,7 +167,7 @@
     <!-----Chamada para ação----->
     <section class="cta">
         <h1>Inscreva-se em nossos vários cursos online</br> Em qualquer lugar do mundo</h1>
-        <a href="" class="hero-btn">Contate-nos</a>
+        <a href="./contact.html" class="hero-btn">Contate-nos</a>
     </section>
     <!-----Footer----->
     <section class="footer">
