--- a/course.html
+++ b/course.html
@@ -28,8 +28,8 @@
                     <li><a href="./index.html">Início</a></li>
                     <li><a href="./about.html">Sobre</a></li>
                     <li><a href="./course.html">Curso</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contato</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
